--- a/quick_weixin/project.config.json
+++ b/quick_weixin/project.config.json
@@ -8,7 +8,7 @@
 		"es6": true,
 		"enhance": true,
 		"postcss": true,
-		"preloadBackgroundData": true,
+		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
 		"coverView": true,
@@ -31,7 +31,7 @@
 		"userConfirmedUseCompilerModuleSwitch": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.11.0",
+	"libVersion": "2.12.0",
 	"appid": "wxecb5d25a4a5c222f",
 	"projectname": "Quick2Weixin",
 	"debugOptions": {
