补齐表单组件

--- a/quick_weixin/app.json
+++ b/quick_weixin/app.json
@@ -1,5 +1,10 @@
 {
   "pages": [
+    "pages/textarea/textarea",
+    "pages/switch/switch",
+    "pages/slider/slider",
+    "pages/label/label",
+    "pages/input/input",
     "test/test"
   ],
   "window": {
