--- a/quick_weixin/app.json
+++ b/quick_weixin/app.json
@@ -3,6 +3,7 @@
     "pages/textarea/textarea",
     "pages/switch/switch",
     "pages/slider/slider",
+    "pages/picker/picker",
     "pages/label/label",
     "pages/input/input",
     "test/test"
