--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toutiao2weixin",
+  "name": "quickapp2weixin",
   "version": "1.6.7",
   "description": "",
   "main": "miniprogram_dist/index.js",
