--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toutiao2weixin",
-  "version": "1.6.7",
+  "version": "1.1.0",
   "description": "",
   "main": "miniprogram_dist/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "dev": "gulp dev --develop",
     "demo": "gulp demo --develop",
     "watch": "gulp watch --develop --watch",
-    "copy": "sh tools/copy.sh",
+    "copy": "node tools/copy",
     "build": "gulp",
     "dist": "npm run build && npm run copy",
     "clean-dev": "gulp clean --develop",
