--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "dev": "gulp dev --develop",
     "demo": "gulp demo --develop",
     "watch": "gulp watch --develop --watch",
-    "copy": "node tools/copy",
     "build": "gulp",
-    "dist": "npm run build && npm run copy",
+    "dist": "npm run build",
     "clean-dev": "gulp clean --develop",
     "clean": "gulp clean",
     "test": "jest ./test/* --silent --bail",
