--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "miniprogram_dist/index.js",
   "scripts": {
     "init": "git submodule init && git submodule update --init --remote && npm run dev",
-    "dev": "gulp dev --develop",
+    "dev": "gulp dev --develop & npm run copy_dev",
     "demo": "gulp demo --develop",
     "watch": "gulp watch --develop --watch",
     "build": "gulp",
-    "copy": "node tools/copy",
-    "dist": "npm run build & npm run copy",
+    "copy_dev": "node tools/copy_dev",
+    "copy_dist": "node tools/copy_dist",
+    "dist": "npm run build & npm run copy_dist",
     "clean-dev": "gulp clean --develop",
     "clean": "gulp clean",
     "test": "jest ./test/* --silent --bail",
