--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ miniprogram_dev/quickapp2weixin/ui/video/video.wxml
 miniprogram_dev/quickapp2weixin/ui/view/view.js
 miniprogram_dev/quickapp2weixin/ui/view/view.wxml
 .DS_Store
+.DS_Store
